Agregado menu cliente, y unas cuantas cosas mas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AdministrarUsuariosActivity"></activity>
+        <activity android:name=".EstablecerHoraDeEntregaPopUp"
+            android:theme="@style/AppTheme.CustomTheme" />
+        <activity android:name=".MenuClientesActivity" />
+        <activity android:name=".SeleccionarZonaClienteActivity" />
+        <activity android:name=".AdministrarUsuariosActivity" />
         <activity
             android:name=".CrearTerminalPopUp"
             android:theme="@style/AppTheme.CustomTheme" />
