--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EntregarActivoPopUp"
+        <activity android:name=".AgregarAdminPopUp"
+            android:theme="@style/AppTheme.CustomTheme" />
+        <activity
+            android:name=".EntregarActivoPopUp"
             android:theme="@style/AppTheme.CustomTheme" />
         <activity
             android:name=".AgregarPuntajePopUp"
